[gd_scene load_steps=3 format=3 uid="uid://davbjlsfdddgd"]

[ext_resource type="Script" path="res://scenes/entry_box/entry_box.gd" id="1_6i0mc"]
[ext_resource type="Theme" uid="uid://70hskfqdsfpy" path="res://assets/fonts/Roboto/RobotoTheme.tres" id="1_k0mdo"]

[node name="EntryBox" type="Node2D"]
script = ExtResource("1_6i0mc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 381.0
offset_bottom = 376.0
color = Color(0.552956, 0.552956, 0.552956, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 126.0
offset_top = 13.0
offset_right = 241.0
offset_bottom = 95.0
color = Color(0, 0, 0, 1)

[node name="PromptLabel" type="Label" parent="."]
offset_top = 104.0
offset_right = 377.0
offset_bottom = 145.0
theme = ExtResource("1_k0mdo")
text = "Enter Prompt Here"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 23.0
offset_top = 177.0
offset_right = 363.0
offset_bottom = 229.0

[node name="SubmitButton" type="Button" parent="."]
offset_left = 53.0
offset_top = 258.0
offset_right = 344.0
offset_bottom = 335.0
theme = ExtResource("1_k0mdo")
text = "Submit Response"

[connection signal="button_up" from="SubmitButton" to="." method="_on_submit_button_button_up"]
